// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectionState Gets correct color 1`] = `
.c0 {
  margin-left: 25px;
  margin-right: 25px;
  display: grid;
  grid-template-columns: [status-indicator] 20px [status-text] 1fr;
}

.c1 {
  grid-column: status-indicator;
  height: 12px;
  width: 12px;
  margin: 10px;
  border-radius: 50%;
  float: right;
  text-align: left;
}

.c2 {
  grid-column: status-text;
  position: relative;
  margin-left: 25px;
  text-align: left;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <span
    className="c2"
  >
    Blanko
  </span>
</div>
`;

exports[`connectionState Gets correct color 2`] = `
.c0 {
  margin-left: 25px;
  margin-right: 25px;
  display: grid;
  grid-template-columns: [status-indicator] 20px [status-text] 1fr;
}

.c1 {
  grid-column: status-indicator;
  height: 12px;
  width: 12px;
  margin: 10px;
  border-radius: 50%;
  float: right;
  text-align: left;
  background-color: #C0392B;
}

.c2 {
  grid-column: status-text;
  position: relative;
  margin-left: 25px;
  text-align: left;
  color: #C0392B;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <span
    className="c2"
  >
    Disconnected
  </span>
</div>
`;

exports[`connectionState Gets correct color 3`] = `
<div
  className="sc-AxirZ ciZpUd"
>
  <div
    className="sc-AxiKw jeQNXl"
  >
    <div
      className="sc-AxhCb guWnsS"
    />
    <span
      className="sc-AxjAm sc-AxhUy lMjjz"
    >
      Connecting
    </span>
  </div>
</div>
`;

exports[`connectionState Gets correct color 4`] = `
<div
  className="sc-AxirZ ciZpUd"
>
  <div
    className="sc-AxiKw jeQNXl"
  >
    <div
      className="sc-AxhCb guWnsS"
    />
    <span
      className="sc-AxjAm sc-AxhUy lMjjz"
    >
      Connected
    </span>
  </div>
</div>
`;

exports[`connectionState renders correctly 1`] = `
.c0 {
  margin-left: 25px;
  margin-right: 25px;
  display: grid;
  grid-template-columns: [status-indicator] 20px [status-text] 1fr;
}

.c1 {
  grid-column: status-indicator;
  height: 12px;
  width: 12px;
  margin: 10px;
  border-radius: 50%;
  float: right;
  text-align: left;
  background-color: #27AE60;
}

.c2 {
  grid-column: status-text;
  position: relative;
  margin-left: 25px;
  text-align: left;
  color: #27AE60;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <span
    className="c2"
  >
    Connected
  </span>
</div>
`;
